--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -32,6 +32,9 @@ AM_CFLAGS = $(XORG_CFLAGS)
 
 INCLUDES=-I$(top_srcdir)/include/
 
-@DRIVER_NAME@_drv_la_SOURCES = @DRIVER_NAME@.c \
-                               @DRIVER_NAME@.h 
+@DRIVER_NAME@_drv_la_SOURCES = 	\
+	trackpoint.c		\
+	trackpoint.h		\
+	@DRIVER_NAME@.c		\
+	@DRIVER_NAME@.h
 
