add into source tar ball.

--- a/configure.ac
+++ b/configure.ac
@@ -77,4 +77,5 @@ AC_OUTPUT([Makefile
            man/Makefile
            include/Makefile
            fdi/Makefile
+           xorg.d/Makefile
            xorg-pointing-stick.pc])
