Ignore /dev/input/mouse*

--- a/xorg.d/pointingstick.conf
+++ b/xorg.d/pointingstick.conf
@@ -1,6 +1,7 @@
 Section "InputClass"
-    Identifier     "pointing stick driver"
-    MatchIsPointer "on"
-    MatchProduct   "Synaptics USB Styk|TrackPoint"
-    Driver         "pointingstick"
+    Identifier      "pointing stick driver"
+    MatchIsPointer  "on"
+    MatchProduct    "Synaptics USB Styk|TrackPoint"
+    MatchDevicePath "/dev/input/event*"
+    Driver          "pointingstick"
 EndSection
